--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/application.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
