--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@babel/preset-react": "^7.18.6",
     "@rails/webpacker": "5.4.3",
+    "antd": "^4.23.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rc-virtual-list": "^6.1.0",
+    "react-router-dom": "^6.4.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-immutable": "^1.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^27.1.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prefer-arrow-functions": "^3.1.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^29.1.2",
+    "prettier": "^2.7.1",
     "webpack-dev-server": "^3"
   }
 }
