--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 { "engines": {
-    "node": "16.16.0"
+    "node": "16.16.0",
+    "yarn": "1.22.19"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
